# teamAI

./: .gitignore  README.md  pyproject.toml  tasks.json
.github/workflows/: ci.yml  test.yml
prompts/: developer.md  docs.md  manager.md  tester.md
scripts/: __init__.py  copilot_pro.py  developer.py  docs_agent.py  manager.py  orchestrator.py  tester.py  update_docs.py
src/: app.py
src/teamai/: app.py  cli.py
tests/: test_app.py  test_cli.py  test_flask_app.py
