[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teamai"
version = "0.1.0"
description = "Team AI utilities"
readme = "README.md"
authors = [{ name = "Patrik Luks" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5.0",
  "mypy>=1.8.0",
  "types-requests>=2.31.0.20240218",
]

[project.scripts]
teamai = "teamai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
